# portfolio_manager

./:  README.md  .gitignore  README.md  main.py  pyproject.toml
backend/: README.md
database/: README.md
docs/: basic-functions.md  danelfin.md  full_prompt.txt  prompt1.md  zsh script.txt
frontend/: README.md
scripts/: run.sh
src/: api_client.py  config.py  danelfin_api.py  main.py  models.py  streamlit_app.py
src/portfolio_manager/: config.py  main.py  models.py  streamlit_app.py
